pics and readme file added

--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
       <div class="mid-cont">
         <button class="start">start over</button>
         <div class="dice-conta">
-          <img src="image/dice-.png" alt="" class="dice" />
+          <img src="images/dice-1.png" alt="" class="dice" />
         </div>
         <button class="roll dis play">roll</button>
         <button class="hold dis play">hold</button>
